--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Cross-Site Scripting Simulation</title>
+
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
@@ -13,6 +14,11 @@
 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" />
+
+                <label>
+                    <input type="checkbox" name="remember" id="remember" />
+                    Remember me
+                </label>
 
                 <button type="submit">Login</button>
             </form>
